# sift

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  DEPLOY.md  Dockerfile  EVAL.md  Makefile  NL_EVAL.md  PLAN.md  README.md  TRIAGE-EVAL.md  docker-compose.yml  fly.toml  render.yaml
backend/: Dockerfile.dev  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 31913f6a10d6_merge_api_usage_and_storage_key_heads.py  4b419de75929_add_duplicate_dismissals_jsonb.py  74d06e0c35fc_add_line_items_jsonb_to_extractions.py  7c7aa1861858_add_anomaly_acks.py  7d1a3d8498c9_rename_file_path_to_storage_key.py  8c3c0a978b23_add_raw_text_raw_text_tsv_fts_to_.py  970d3f2a6c07_initial_schema_invoices_vendors_.py  9b2c7070f362_add_users_and_auth_sessions.py  a1b8c39e7f02_add_api_usage.py  cf50d4a567b6_add_tax_breakdown_jsonb_to_extractions.py
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py  llm_client.py  pdf_reader.py
backend/app/adapters/storage/: __init__.py  anomaly_repo.py  blob_store.py  extraction_repo.py  (+7 more)
backend/app/api/: __init__.py  anomalies.py  auth.py  deps.py  invoices.py  search.py  usage.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/domain/: __init__.py  anomalies.py  anomalies_models.py  auth.py  confidence.py  date_parser.py  duplicates.py  models.py  nl_schema.py  scoring.py  triage.py  validators.py
backend/app/prompts/: __init__.py  extraction_header_v1.md  extraction_header_v2.md  extraction_header_vision_v1.md  extraction_header_vision_v2.md  extraction_line_items_v1.md  extraction_tax_breakdown_v1.md  nl_to_structured_query_v1.md
backend/app/services/: __init__.py  anomaly_service.py  auth_service.py  cascade.py  clerk_actions.py  extraction_service.py  invoice_queries.py  nl_translation_service.py  pricing.py  search_service.py  usage_service.py  vendor_memory_service.py
backend/eval/: extraction.md  groundtruth.json  nl.md  search.md
backend/scripts/: backfill_invoice_date_iso.py  eval_extraction.py  eval_nl.py  eval_search.py  redrive_triage.py  seed_demo.py  seed_eval.py  sync_demo_blobs.py
backend/tests/: conftest.py
backend/tests/fixtures/: generate_clean.py  generate_scan.py
backend/tests/integration/: conftest.py  test_anomaly_api.py  test_anomaly_repo.py  test_anomaly_service.py  test_auth_api.py  test_auth_repos.py  test_auth_service.py  test_cascade.py  test_extract_line_items.py  test_extract_tax_breakdown.py  test_extraction_service.py  test_health.py  test_invoices_api.py  test_llm_client.py  test_nl_translation.py  test_pdf_reader.py  test_repos.py  test_search.py  test_stub_llm_client.py  test_triage_actions.py  test_vendor_memory_service.py
backend/tests/unit/: test_agreement.py  test_anomalies.py  test_anomaly_models.py  test_auth_domain.py  test_blob_store_factory.py  test_confidence.py  test_config.py  test_date_parser.py  test_domain_models.py  test_duplicates.py  test_line_items.py  test_local_blob_store.py  test_nl_schema.py  test_prompts.py  test_r2_blob_store.py  test_scoring.py  test_tax_breakdown.py  test_triage.py  test_validators.py
(+102 files in other folders)
