[project]
name = "sift"
version = "0.1.0"
description = "Vendor invoices → structured queryable data. Built for the Zamp engineering project round."
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",          # file uploads

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",

    # Database — Postgres + SQLAlchemy 2.0 sync per ADR-0002
    "sqlalchemy>=2.0.35",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",                    # enabled from day one per ADR-0002

    # LLM
    "anthropic>=0.39.0",

    # PDF processing per ADR-0001
    "pymupdf>=1.24.0",                    # digital path: text + bboxes + tables
    "pdf2image>=1.17.0",                  # vision path: render to PNG
    "pillow>=11.0.0",

    # Duplicate detection per beat 2
    "imagehash>=4.3.0",                   # perceptual hash

    # Logging
    "structlog>=24.4.0",

    # HTTP retries (LLM auto-retry per ADR-0006)
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",                      # for FastAPI TestClient
    "ruff>=0.7.0",
    "import-linter>=2.1.0",               # enforces ADR-0005 layer boundaries
    "pydantic-to-typescript>=2.0.0",      # generates frontend types from Pydantic
    "mypy>=1.13.0",
    "reportlab>=4.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle, pyflakes
    "I",                 # isort
    "B",                 # bugbear
    "UP",                # pyupgrade
    "RUF",               # ruff-specific
    "SIM",               # flake8-simplify
    "TID",               # banned imports
]
ignore = ["E501"]        # ruff format handles line length

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]     # asserts ok in tests
"alembic/*" = ["E402"]   # alembic templates do late imports

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

# Layer-boundary enforcement per ADR-0005
[tool.importlinter]
root_package = "app"

[[tool.importlinter.contracts]]
name = "domain has no outward dependencies"
type = "forbidden"
source_modules = ["app.domain"]
forbidden_modules = [
    "app.api",
    "app.services",
    "app.adapters",
    "app.db",
]

[[tool.importlinter.contracts]]
name = "adapters do not import services"
type = "forbidden"
source_modules = ["app.adapters"]
forbidden_modules = ["app.services", "app.api"]

[[tool.importlinter.contracts]]
name = "api is a thin shell — no domain or adapter imports"
type = "forbidden"
source_modules = ["app.api"]
forbidden_modules = ["app.adapters", "app.db"]
# api imports services only; services orchestrate domain + adapters
